...
        singleLine = true)
    ExposedDropdownMenu(
        expanded = isExpanded,
        onDismissRequest = { isExpanded = false },
        modifier =
            Modifier.exposedDropdownSize(true)
                .testTag("exposedDropDownMenu")
                .requiredSizeIn(maxHeight = 150.dp)) {
          options.forEach { option ->
            DropdownMenuItem(
                text = { Text(text = option, fontSize = 16.sp) },
                onClick = {
                  selectedOption = option
...
              imageVector = Icons.Default.Face,
              contentDescription = "Search Icon",
          )
        },
        trailingIcon = {
          ExposedDropdownMenuDefaults.TrailingIcon(
              expanded = isExpanded, modifier = Modifier.testTag("multiSelectDropDownToggleIcon"))
        },
        readOnly = true // Make the text field read-only to handle input via dropdown
        )
    ExposedDropdownMenu(
        expanded = isExpanded,
        onDismissRequest = { isExpanded = false },
        modifier = Modifier.testTag("multiSelectExposedDropdownMenu")) {
          for (friend in friendsList) {
            val isSelected = selectedItems.contains(friend)
            DropdownMenuItem(
                text = { Text(text = friend.username, style = MaterialTheme.typography.bodyLarge) },
                onClick = {
                  if (isSelected) {
...
          onLocationChanged(it)
          getLocations()
        },
        label = label,
        trailingIcon = {
          ExposedDropdownMenuDefaults.TrailingIcon(
              expanded = expanded, modifier = Modifier.testTag("locationDropDownMenuToggleIcon"))
        },
        shape = RoundedCornerShape(12.dp),
        modifier = modifier.menuAnchor(MenuAnchorType.PrimaryEditable))
    ExposedDropdownMenu(
        modifier =
            Modifier.exposedDropdownSize(true)
                .requiredSizeIn(maxHeight = 150.dp)
                .testTag("locationExposedDropDownMenu"),
        expanded = expanded,
        onDismissRequest = { setExpanded(false) },
    ) {
      locationList.forEach { location ->
        DropdownMenuItem(
            text = { Text(location.address, style = MaterialTheme.typography.bodyLarge) },
...
        confirmButton = {
          TextButton(
              onClick = {
                openDialog.value = false
                onClickConfirmButton()
              },
              modifier = Modifier.testTag("dialogConfirmButton")) {
                Text("Ok")
              }
        },
        modifier = modifier)
  }
}
...
    AlertDialog(
        icon = boxIcon,
        text = {
          Text(
              text = message,
              textAlign = TextAlign.Center,
              modifier = Modifier.testTag("DisplayText"))
        },
        title = {
          Text(
              text = title,
              modifier = Modifier.testTag("DisplayTitle"),
          )
        },
        onDismissRequest = {},
        confirmButton = {
          TextButton(
              onClick = onClickConfirmButton, modifier = Modifier.testTag("dialogConfirmButton")) {
...
